2008-08-18 Rodrigo Kumpera  <rkumpera@novell.com>

	* mempool-internals.h: Header for mono private mempool functions. The first
	two function are for allocating glib linked lists using pools.

	* mempool.c: Added g_list_prepend_mempool and g_slist_prepend_mempool.

	* Makefile.am: Added mempool-internals.h.

2008-08-16  Zoltan Varga  <vargaz@gmail.com>

	* domain.c (mono_domain_create): Call the JIT domain hook if installed.
	(mono_domain_free): Ditto.

	* domain-internals.h (struct _MonoDomain): Add 'runtime_info' field, this could
	be used by the JIT to store its domain-specific information, instead of putting
	it directly into MonoDomain.

	* domain.c (mono_install_create_domain_hook): New helper function to install
	a hook which initializes domain->runtime_info.

	* domain.c (mono_install_free_domain_hook): Ditto.
	
2008-08-15  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (mono_delegate_end_invoke): Raise an exception instead of
	asserting if the ares parameter is null.

	* mono-perfcounters.c: Fix warnings.

	* marshal.c (mono_marshal_get_delegate_begin_invoke): Don't set save_lmf, it
	is not needed, don't check for interruptions either.
	(mono_marshal_get_delegate_end_invoke): Ditto.

2008-08-15  Marek Habersack  <mhabersack@novell.com>

	* mono-perfcounters.c (predef_readonly_counter): added support for
	reading the ASP.NET Requests Queued counter from another process.

2008-08-12  Zoltan Varga  <vargaz@gmail.com>

	* metadata-internals.h: Move the 'aot_module' field from MonoAssembly to
	MonoImage to simplify the AOT code.

2008-08-10  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (emit_marshal_object): Implement native-to-managed StringBuilder
	marshalling. Fixes #416078.

2008-08-08  Zoltan Varga  <vargaz@gmail.com>
	
	* marshal.c (mono_marshal_get_native_wrapper): Add an 'aot' argument, when
	it is set, looking up the icall address is deferred to the JIT, since 
	in embedded scenarios, the icall might not be registered in the runtime